[package]
name = "pallet-xcm-benchmarks"
authors.workspace = true
edition.workspace = true
version.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
frame-support = { default-features = false, git = "ssh://git@github.com/PEER-Inc/peer-substrate.git" , branch = "vne-mainnet" }
frame-system = { default-features = false, git = "ssh://git@github.com/PEER-Inc/peer-substrate.git" , branch = "vne-mainnet" }
sp-runtime = { default-features = false, git = "ssh://git@github.com/PEER-Inc/peer-substrate.git" , branch = "vne-mainnet" }
sp-std = { default-features = false, git = "ssh://git@github.com/PEER-Inc/peer-substrate.git" , branch = "vne-mainnet" }
xcm-executor = { path = "../xcm-executor", default-features = false }
frame-benchmarking = { default-features = false, git = "ssh://git@github.com/PEER-Inc/peer-substrate.git" , branch = "vne-mainnet" }
xcm = { path = "..", default-features = false }
log = "0.4.17"

[dev-dependencies]
pallet-balances = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git" , branch = "vne-mainnet" }
pallet-assets = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git" , branch = "vne-mainnet" }
sp-core = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git" , branch = "vne-mainnet" }
sp-io = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git" , branch = "vne-mainnet" }
sp-tracing = { git = "ssh://git@github.com/PEER-Inc/peer-substrate.git" , branch = "vne-mainnet" }
xcm-builder = { path = "../xcm-builder" }
xcm = { path = ".." }
# temp
pallet-xcm = { path = "../pallet-xcm" }
Peer-Runtime-common = { path = "../../runtime/common" }

peer-primitives = { path = "../../primitives" }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
	"sp-runtime/std",
	"sp-std/std"
]
runtime-benchmarks = [
	"xcm/runtime-benchmarks",
	"xcm-executor/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
